--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@cloudflare/next-on-pages": "^1.13.5",
     "eslint": "^8.52.0",
     "eslint-config-next": "^13.5.6",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "vercel": "^37.12.1"
   }
 }
