--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "craftzdog-homepage",
+  "name": "portfolio",
   "version": "1.0.0",
-  "description": "Takuya's website",
+  "description": "Emilio's website",
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "prettier": "prettier --write .",
-    "lint": "next lint",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy"
+    "lint": "next lint"
   },
   "keywords": [],
-  "author": "Takuya Matsuyama",
+  "author": "Emilio Quintana",
   "license": "MIT",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -29,7 +26,6 @@
     "three": "^0.157.0"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.5",
     "eslint": "^8.52.0",
     "eslint-config-next": "^13.5.6",
     "prettier": "^3.0.3",
